  (Fabrice Le Fessant)

### Bytecode debugger (ocamldebug):

- GPR#977: Catch Out_of_range in "list" command
  (Yunxing Dai)

### Tools:

- PR#5163: ocamlobjinfo, dump globals defined by bytecode executables
  (Stéphane Glondu)

- PR#7333: ocamldoc, use the first sentence of text file as
  a short description in overviews.
  (Florian Angeletti)

- GPR#848: ocamldoc, escape link targets in HTML output
  (Etienne Millon, review by Gabriel Scherer, Florian Angeletti and
  Daniel Bünzli)

- GPR#986: ocamldoc, use relative paths in error message
  to solve ocamlbuild+doc usability issue (ocaml/ocamlbuild#79)
  (Gabriel Scherer, review by Florian Angeletti, discussion with Daniel Bünzli)

- GPR#1017: ocamldoc, add an option to detect code fragments that could be
  transformed into a cross-reference to a known element.
  (Florian Angeletti, review and suggestion by David Allsopp)

- clarify ocamldoc text parsing error messages
  (Gabriel Scherer)

### Compiler distribution build system:

- GPR#887: allow -with-frame-pointers if clang is used as compiler on Linux
  (Bernhard Schommer)

- GPR#919: use clang as preprocessor assembler if clang is used as compiler
  (Bernhard Schommer)

- GPR#927: improve the detection of hashbang support in the configure script
  (Armaël Guéneau)

- PR#7377: remove -std=gnu99 for newer gcc versions
  (Damien Doligez, report by ygrek)

- GPR#693: fail on unexpected errors or warnings within caml_example
  environment.
  (Florian Angeletti)

- GPR#729: Make sure ocamlnat is built with a $(EXE) extension, merge
  rules between Unix and Windows Makefiles
  (Sébastien Hinderer, review by Alain Frisch)

- GPR#762, GPR#764: Merge Unix and Windows Makefiles in yacc/ and
  debugger/
  (Sébastien Hinderer)

- GPR#827: install missing mli and cmti files, new make target
  install-compiler-sources for installation of compiler-libs ml files
  (Hendrik Tews)

- GPR#898: fix locale-dependence of primitive list order,